# hellbot

./: PARAMETER_GUIDE.md  README.md  _vizdoom.ini  mise.toml  pyproject.toml
config/: settings.py
scripts/: play.py  train.py
src/hellbot/: __init__.py
src/hellbot/environments/: __init__.py  vizdoom_env.py
src/hellbot/optimization/: __init__.py  hyperparams.py
src/hellbot/training/: __init__.py  trainer.py
