[project]
name = "hellbot"
version = "0.1.0"
description = "A reinforcement learning bot for VizDoom environments with curriculum learning"
requires-python = ">=3.12"
dependencies = [
    "gymnasium==0.29.1",
    "stable-baselines3==2.3.2",
    "torch>=2.0.0",
    "torchaudio>=2.0.0", 
    "torchvision>=0.15.0",
    "vizdoom==1.2.4",
    "optuna>=3.4.0",
    "optuna-dashboard>=0.15.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/hellbot"]
